--- a/AutoSubs-App/src-tauri/Cargo.toml
+++ b/AutoSubs-App/src-tauri/Cargo.toml
@@ -38,7 +38,7 @@ tauri-plugin-os = "2"
 
 # Add transcription and diarization dependencies
 whisper-rs = { git = "https://codeberg.org/tazz4843/whisper-rs.git", default-features = false, features = ["tracing_backend"] }
-pyannote-rs = { git = "https://github.com/tmoroney/pyannote-rs", branch = "main"}
+pyannote-rs = { git = "https://github.com/tmoroney/pyannote-rs", branch = "main", default-features = false }
 num = "0.4.1"
 once_cell = "1.19.0"
 which = "6.0.1"
@@ -59,7 +59,7 @@ regex = "1"
 tauri-plugin-updater = "2"
 
 [features]
-default = ["mac-aarch"]
+default = []
 coreml = ["whisper-rs/coreml", "pyannote-rs/coreml"]
 directml = ["pyannote-rs/directml"]
 cuda = ["whisper-rs/cuda", "pyannote-rs/load-dynamic"]
